--- a/site/main.css
+++ b/site/main.css
@@ -29,8 +29,11 @@ body {
 #stats {
     position: absolute;
     bottom: 0px;
-    left: 210px;
-    right: 510px;
+    /*left: 210px;*/
+    /*right: 510px;*/
+    right: 0px;
+    width: 500px;
+    z-index:500;
     padding: 20px;
 
     background-color: rgba(255,255,255,0.9);
