--- a/site/main.css
+++ b/site/main.css
@@ -55,6 +55,13 @@ body {
     border-bottom: 2px solid lightcyan;
 }
 
+.team-label {
+    text-align: center;
+    width: 100%;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
 .red-bar {
     background-color: red;
 }
